# iblrig

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_contribute.md  README_installation.md  api.html  changelog.html  cleanup.py  env.yml  environment.yaml  extra_dependencies.txt  faq.html  genindex.html  hardware.html  ibl-environment-linux.yml  ibl-environment-windows.yml  iblrig_params.yml  iblrig_params_template.yaml  index.html  install.py  install.txt  installation.html  objects.inv  py-modindex.html  pybpod-Anaconda_Powershell_Prompt.lnk  pybpod.bat  pyproject.toml  reference.html  reference_description_file.html  reference_developer_guide.html  reference_task_qc.html  reference_write_your_own_task.html  release_notes.md  (+18 more)
.doctrees/: api.doctree  environment.pickle  faq.doctree  hardware.doctree  index.doctree  installation.doctree  reference.doctree  reference_description_file.doctree  reference_developer_guide.doctree  reference_task_qc.doctree  reference_write_your_own_task.doctree  usage.doctree  usage_behavior.doctree  usage_copy.doctree  usage_neuropixel.doctree  usage_video.doctree
Bonsai/: Bonsai.config  Bonsai.exe.settings  NuGet.Config  empty.bonsai  empty.bonsai.layout  install.ps1  setup.bat
Bonsai-2.3/: Bonsai.config
Bonsai_workflows/: README.md  README.md~
_images/: inheritance-00d4e22b8702143f37203f9bc0d32645b7482bb3.png.map  inheritance-01e5cf62bece4a9d43867a141b4152378f6bbac8.png.map  inheritance-05a72a67dab81d508ba6a14f62604907a02a4dec.png.map  inheritance-05dce2d109e90b0ec9c8f4818c0078ae494485d7.png.map  inheritance-089821f958eed42ed185fde6164951791a68efb2.png.map  inheritance-097f586b0c791359bbab34867b4afac2f2d264e6.png.map  inheritance-0c14956a68db2d52a2a3627deee027de912d3360.png.map  inheritance-0d186f841a39716398fe2704724d17070edd776d.png.map  inheritance-0d6d3b82e3e6faba09f4c4e7ac4f368b60b11b6b.png.map  inheritance-120ef3e377c61583f2bb3112e5a2870fdac25698.png.map  inheritance-1420b9d6cc60c40b6f4a1ae3ef15ef82ba1c68c5.png.map  inheritance-16e88b56fe4e8229ede8440ac20a67ea73430770.png.map  inheritance-1a3008fb1cdcca33f100f4bfe4ed3bd041f253b3.png.map  inheritance-1add4e80ee4a8171fb0331230a8f4bce8d1d6a30.png.map  inheritance-1d215958ac6eda261e155ab7bc08db18cb0cf5a0.png.map  inheritance-1d4436ab1d791b5fcf62d032d148c62e73d94de8.png.map  inheritance-1d512d363827a66e97742773a527f88af4fba97e.png.map  inheritance-1d5995b710cc5588d837e10a7c16acd38b101734.png.map  inheritance-21c189dcca65dac77dc490c26bdaad9455fc81c4.png.map  inheritance-22e207cc387349eea193c7d59825bb408de52aff.png.map  inheritance-2436f87f2dfaf91faaf8ee9f72ce5eb6df3c59fd.png.map  inheritance-264b184fe07c8a9457fe41991537378e2f5a9bf6.png.map  inheritance-2702369b9b65cbee767eec6d565f406bb6ba273a.png.map  inheritance-2a2bc5ba6237a818420873ff4ae709188f0e3a39.png.map  inheritance-2b77faabda364e5ba4aa3ea3a79903e4d5ec5434.png.map  inheritance-2e3f4f66297dbe2bc2111484febab8629b9ae4a8.png.map  inheritance-2e5c825106643a6078d8e03196cc7205ced5c4c0.png.map  inheritance-34569d12e07a172ce36bfbd38c451d96faecf3b5.png.map  inheritance-34ca386b2fb8b8f608f579a0d308b6d8cbc5bedb.png.map  inheritance-38c7b91022f979a7eb3fe9863df5f5ec1af2fa4d.png.map  inheritance-3dc280ebfd9ee20d3a85bb43cb3da7ce4f25b5da.png.map  inheritance-3e4c398801fe9b555e15da00e924b323364788f5.png.map  inheritance-46e045abb8a28143dced92935500c0da6a0fdd96.png.map  inheritance-49f20a0613ad45b9335ebc9b4f17a3bf5d3fc151.png.map  inheritance-4af3aeda485a56b185b45acda574c0ff8321a134.png.map  inheritance-4c867d778a6a84e794d37e04566ea65c448f0d8e.png.map  inheritance-4e61557d8f6ee7735648b90e8774b4272d476121.png.map  inheritance-4f17a2b0c0154c7dfbc409eaf142904510f1b6b7.png.map  inheritance-4f83b5b6cc8f93bd28e1280f456db33d3af88fd3.png.map  inheritance-4fc4804e4b4d59e45337a9600762fdda0782ca9b.png.map  (+101 more)
_modules/: index.html
_sources/: api.rst.txt  faq.rst.txt  hardware.rst.txt  index.rst.txt  installation.rst.txt  reference_description_file.rst.txt  reference_developer_guide.rst.txt  reference_task_qc.rst.txt  reference_write_your_own_task.rst.txt  usage.rst.txt  usage_behavior.rst.txt  usage_copy.rst.txt  usage_neuropixel.rst.txt  usage_video.rst.txt
_static/: documentation_options.js
api/: iblrig.base_choice_world.ActiveChoiceWorldSession.html  iblrig.base_choice_world.ActiveChoiceWorldTrialData.html  iblrig.base_choice_world.BiasedChoiceWorldSession.html  iblrig.base_choice_world.BiasedChoiceWorldTrialData.html  iblrig.base_choice_world.ChoiceWorldSession.html  iblrig.base_choice_world.ChoiceWorldTrialData.html  iblrig.base_choice_world.HabituationChoiceWorldSession.html  iblrig.base_choice_world.HabituationChoiceWorldTrialData.html  iblrig.base_choice_world.TrainingChoiceWorldSession.html  iblrig.base_choice_world.TrainingChoiceWorldTrialData.html  iblrig.base_choice_world.html  iblrig.base_tasks.BaseSession.html  iblrig.base_tasks.BonsaiRecordingMixin.html  iblrig.base_tasks.BonsaiVisualStimulusMixin.html  iblrig.base_tasks.BpodMixin.html  iblrig.base_tasks.EmptySession.html  iblrig.base_tasks.Frame2TTLMixin.html  iblrig.base_tasks.HasBpod.html  iblrig.base_tasks.NetworkSession.html  iblrig.base_tasks.OSCClient.html  iblrig.base_tasks.RotaryEncoderMixin.html  iblrig.base_tasks.SoundMixin.html  iblrig.base_tasks.SpontaneousSession.html  iblrig.base_tasks.ValveMixin.html  iblrig.base_tasks.html  iblrig.choiceworld.compute_adaptive_reward_volume.html  iblrig.choiceworld.contrasts_set.html  iblrig.choiceworld.draw_training_contrast.html  iblrig.choiceworld.get_subject_training_info.html  iblrig.choiceworld.html  iblrig.choiceworld.training_contrasts_probabilities.html  iblrig.choiceworld.training_phase_from_contrast_set.html  iblrig.commands.dir_path.html  iblrig.commands.flush.html  iblrig.commands.html  iblrig.commands.remove_local_sessions.html  iblrig.commands.transfer_data.html  iblrig.commands.transfer_data_cli.html  iblrig.commands.transfer_ephys_data_cli.html  iblrig.commands.transfer_video_data_cli.html  (+247 more)
docs/: Makefile  make.bat  read_me.rst
(+1708 files in other folders)
