[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "iblrig"
description = "The International Brain Laboratory's decision making task"
dynamic = [ "version" ]
keywords = [ "IBL", "neuro-science" ]
requires-python = "==3.10.*"
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    # PLEASE DO NOT ADD / UPDATE DEPENDENCIES MANUALLY.
    # Instead, use `pdm add [package-name]` / `pdm update [package-name]`.
    # This is to ensure that the lock-file is in sync with pyproject.toml
    # See https://pdm-project.org/en/latest/usage/dependency/ for details.
    "PyQt5>=5.15.10",
    "PyQt5-Qt5==5.15.2",            # PINNED due to lack of windows bdist
    "PyQtWebEngine>=5.15.6",
    "PyQtWebEngine-Qt5==5.15.2",    # PINNED due to lack of windows bdist
    "ONE-api>=2.8.0",
    "PyYAML>=6.0.1",
    "colorlog>=6.8.2",
    "graphviz>=0.20.3",
    "ibllib>=2.37.0",
    "iblpybpod@git+https://github.com/int-brain-lab/iblpybpod.git@no-gui",
    "iblscripts@git+https://github.com/int-brain-lab/iblscripts.git",
    "iblutil>=1.10.0",
    "ipython>=8.26.0",
    "numpy>=1.26.4",
    "packaging>=24.1",
    "pandas>=2.2.2",
    "project_extraction@git+https://github.com/int-brain-lab/project_extraction.git",
    "pydantic>=2.8.0",
    "pyqtgraph>=0.13.7",
    "python-osc>=1.8.3",
    "pyusb>=1.2.1",
    "scipy>=1.14.0",
    "sounddevice>=0.4.7",
]

[project.scripts]
view_session        = "iblrig.commands:view_session"
transfer_data       = "iblrig.commands:transfer_data_cli"
transfer_video_data = "iblrig.commands:transfer_video_data_cli"
transfer_ephys_data = "iblrig.commands:transfer_ephys_data_cli"
flush               = "iblrig.commands:flush"
remove-old-sessions = "iblrig.commands:remove_local_sessions"
iblrig              = "iblrig.gui.wizard:main"
upgrade_iblrig      = "iblrig.upgrade_iblrig:upgrade"
install_spinnaker   = "iblrig.video:install_spinnaker"
install_pyspin      = "iblrig.video:install_pyspin"
start_video_session = "iblrig.video:prepare_video_session_cmd"
start_ephys_session = "iblrig.ephys:prepare_ephys_session_cmd"
convert_uis         = "iblrig.gui.tools:convert_uis"
validate_iblrig     = "iblrig.hardware_validation:run_all_validators_cli"
validate_video      = "iblrig.video:validate_video_cmd"

[tool.pdm.version]
source = "file"
path = 'iblrig/__init__.py'

[tool.pdm.build]
source-includes = [ "docs", "iblrig/test" ]
excludes = [ "docs/build" ]

[tool.pdm.dev-dependencies]
dev = [
    # PLEASE DO NOT ADD / UPDATE DEV DEPENDENCIES MANUALLY.
    # Instead, use `pdm add -d [package-name]` / `pdm update [package-name]`.
    # This is to ensure that the lock-file is in sync with pyproject.toml
    # See https://pdm-project.org/en/latest/usage/dependency/ for details.
    "pre-commit>=3.7.1",
    "iblrig[test, doc, typing]",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.1",
]
doc = [
    "sphinx>=7.3.7",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-lesson>=0.8.16",
    "myst-parser>=3.0.1",
]
typing = [
    "mypy>=1.10.1",
    "PyQt5-stubs>=5.15",
    "types-PyYAML>=6.0.12.20240311",
    "types-requests>=2.32.0.20240622",
    "types-python-dateutil>=2.9.0.20240316",]

[tool.mypy]
files                  = [ "iblrig/[!test]**/*.py", "iblrig_tasks/**/*.py" ]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts    = "-ra --showlocals --cov=iblrig --cov=iblrig_tasks --cov-report=html --cov-report=xml --tb=short"
minversion = "6.0"
testpaths  = [ "iblrig/test" ]
filterwarnings = [ "ignore::DeprecationWarning:nptyping.*" ]

[tool.ruff]
exclude = [
    ".mypy_cache",
    "dist",
    "docs",
    "iblrig/gui/*_rc.py",
    "iblrig/gui/ui_*.py",
    "venv",
]
indent-width = 4
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle Error
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]

[tool.ruff.lint.per-file-ignores]
"iblrig/gui/**" = [
    "N802", # Invalid function name
    "N803", # Argument name should be lowercase
    "N815", # Mixed case variable in class scope
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [ "ibl*", "one*", "pybpod*" ]
